[gd_scene load_steps=9 format=3 uid="uid://0jfnrjxrut4g"]

[ext_resource type="Script" path="res://Scripts/Scenes/Cliente_agregar/Cliente_Añadir.gd" id="1_hdydy"]
[ext_resource type="FontFile" uid="uid://mlp8q7px4xto" path="res://Fonts/Super Morning.ttf" id="2_vcw0n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kx6wo"]
bg_color = Color(0.461028, 1, 0.429352, 1)
border_width_left = 35
border_width_top = 35
border_width_right = 35
border_width_bottom = 35
border_color = Color(0, 1, 0, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6yqus"]
bg_color = Color(0.462745, 1, 0.427451, 0)
border_width_right = 6
border_width_bottom = 6
border_color = Color(0, 0.293513, 1.44392e-07, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jvsgv"]
bg_color = Color(0, 0.513726, 0, 0.407843)

[sub_resource type="Animation" id="Animation_u2g76"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_5brqr"]
resource_name = "aparecer"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ibx5q"]
_data = {
"RESET": SubResource("Animation_u2g76"),
"aparecer": SubResource("Animation_5brqr")
}

[node name="Pedido" type="Control"]
visible = false
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -558.0
offset_bottom = -451.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdydy")

[node name="Cartel" type="Panel" parent="."]
layout_mode = 0
offset_right = 293.0
offset_bottom = 159.0
theme_override_styles/panel = SubResource("StyleBoxFlat_kx6wo")

[node name="Cartel" type="Panel" parent="Cartel"]
layout_mode = 0
offset_right = 294.0
offset_bottom = 160.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6yqus")

[node name="Texto" type="Control" parent="."]
anchors_preset = 0
offset_left = 99.0
offset_top = 15.0
offset_right = 216.0
offset_bottom = 132.0

[node name="ID Cliente" type="Label" parent="Texto"]
layout_mode = 0
offset_left = -91.0
offset_top = -10.0
offset_right = 594.0
offset_bottom = 46.0
scale = Vector2(0.4, 0.4)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0.270588, 0, 1)
theme_override_constants/outline_size = 14
theme_override_fonts/font = ExtResource("2_vcw0n")
theme_override_font_sizes/font_size = 45
text = "Cliente #"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Nombre" type="RichTextLabel" parent="Texto"]
layout_mode = 0
offset_left = -90.0
offset_top = 25.0
offset_right = 133.0
offset_bottom = 88.0
scale = Vector2(0.3, 0.3)
theme_override_colors/default_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_vcw0n")
theme_override_font_sizes/normal_font_size = 45
text = "Nombre: "

[node name="Nombre2" type="TextEdit" parent="Texto"]
layout_mode = 0
offset_left = -26.0
offset_top = 24.0
offset_right = 557.0
offset_bottom = 87.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/font = ExtResource("2_vcw0n")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/focus = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_jvsgv")
placeholder_text = "Pon su nombre"

[node name="Email" type="RichTextLabel" parent="Texto"]
layout_mode = 0
offset_left = -91.0
offset_top = 49.0
offset_right = 59.0
offset_bottom = 109.0
scale = Vector2(0.3, 0.3)
theme_override_colors/default_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_vcw0n")
theme_override_font_sizes/normal_font_size = 45
text = "Email: "

[node name="Email2" type="TextEdit" parent="Texto"]
layout_mode = 0
offset_left = -43.0
offset_top = 48.0
offset_right = 710.0
offset_bottom = 111.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/font = ExtResource("2_vcw0n")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/focus = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_jvsgv")
placeholder_text = "correo@gmail.com"

[node name="Telefono" type="RichTextLabel" parent="Texto"]
layout_mode = 0
offset_left = -91.0
offset_top = 73.0
offset_right = 142.0
offset_bottom = 136.0
scale = Vector2(0.3, 0.3)
theme_override_colors/default_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_vcw0n")
theme_override_font_sizes/normal_font_size = 45
text = "Telefono:"

[node name="Telefono2" type="TextEdit" parent="Texto"]
layout_mode = 0
offset_left = -19.0
offset_top = 72.0
offset_right = 641.0
offset_bottom = 135.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/font = ExtResource("2_vcw0n")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/focus = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_jvsgv")
placeholder_text = "1234567890"
wrap_mode = 1

[node name="Fecha de Registro" type="RichTextLabel" parent="Texto"]
layout_mode = 0
offset_left = -91.0
offset_top = 94.0
offset_right = 609.0
offset_bottom = 154.0
scale = Vector2(0.3, 0.3)
theme_override_colors/default_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/normal_font = ExtResource("2_vcw0n")
theme_override_font_sizes/normal_font_size = 45
text = "Fecha de Registro:         -           -"

[node name="Dia" type="TextEdit" parent="Texto"]
layout_mode = 0
offset_left = 38.0
offset_top = 93.0
offset_right = 125.0
offset_bottom = 156.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/font = ExtResource("2_vcw0n")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/focus = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_jvsgv")
placeholder_text = "Dia"
wrap_mode = 1

[node name="Mes" type="TextEdit" parent="Texto"]
layout_mode = 0
offset_left = 72.0
offset_top = 93.0
offset_right = 185.0
offset_bottom = 156.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/font = ExtResource("2_vcw0n")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/focus = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_jvsgv")
placeholder_text = "Mes"
wrap_mode = 1

[node name="Año" type="TextEdit" parent="Texto"]
layout_mode = 0
offset_left = 116.0
offset_top = 93.0
offset_right = 246.0
offset_bottom = 156.0
scale = Vector2(0.3, 0.3)
theme_override_colors/font_color = Color(0, 0.270588, 0, 1)
theme_override_fonts/font = ExtResource("2_vcw0n")
theme_override_font_sizes/font_size = 45
theme_override_styles/normal = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/focus = SubResource("StyleBoxFlat_jvsgv")
theme_override_styles/read_only = SubResource("StyleBoxFlat_jvsgv")
placeholder_text = "Año"
wrap_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ibx5q")
}
